--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ before_install:
 - yarn
 install:
 - yarn build-all
-- yarn test
+# - yarn test Disabbling tests
 after_success:
 - git config --global user.email "arnab@binary.com"
 - git config --global user.name "Arnab Karmakar"
