--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ branches:
 before_install:
 - yarn
 install:
-- yarn build-all
+- yarn build
 after_success:
 - git config --global user.email "arnab@binary.com"
 - git config --global user.name "Arnab Karmakar"
